--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "bun api/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun --env-file=env/.dev.env api/app.ts ",
+    "dev": "bun --watch --env-file=env/.dev.env api/app.ts ",
     "biome": "bunx --bun biome format --write ./api ./public ./src"
   },
   "devDependencies": {
